fixed join container on mobiles

--- a/client/src/components/Join/Join.css
+++ b/client/src/components/Join/Join.css
@@ -28,7 +28,7 @@ body {
 }
 
 .join__container {
-  width: 20%;
+  width: 50%;
 }
 
 .join__input {
